@startuml
title Architecture ArchiViz - Moteur 3D (Version Janvier 2026)

skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam roundcorner 10

abstract class Shape {
  # m_position: QVector3D
  # m_color: QVector4D
  # m_vao: QOpenGLVertexArrayObject
  # m_vbo: QOpenGLBuffer
  # m_ebo: QOpenGLBuffer
  # m_geometryVertices: QVector<QVector3D>
  # m_geometryNormals: QVector<QVector3D>
  # m_vertices: QVector<float>
  # m_indices: QVector<GLuint>
  + {abstract} generateGeometry()
  + init()
  + drawGeometry()
}

class CompositeObject {
  # m_shapes: QList<Entry>
  + addShape(shape: Shape*, transform: QMatrix4x4)
  + draw(program: QOpenGLShaderProgram*, viewProj: QMatrix4x4)
  + init() <<override>>
}

class Chair {
  - m_scale: float
  + buildGeometry()
  + init() <<override>>
}

class DrawingArea {
  - m_program: QOpenGLShaderProgram
  - m_shapes: QVector<Shape*>
  - m_view: QMatrix4x4
  - m_projection: QMatrix4x4
  - m_lightPosition: QVector3D
  - m_viewPosition: QVector3D
  # initializeGL() <<override>>
  # paintGL() <<override>>
  # resizeGL() <<override>>
  - initializeShaders()
  - drawShapes()
}

' Primitives
class Cube {
  - m_size: float
  + generateGeometry() <<override>>
}
class Sphere {
  - m_radius: float
  + generateGeometry() <<override>>
}
class Cylinder {
  - m_radius: float
  - m_height: float
  + generateGeometry() <<override>>
}
class Pyramid {
  - m_base: float
  - m_height: float
  + generateGeometry() <<override>>
}

' Relations
Shape <|-- Cube
Shape <|-- Sphere
Shape <|-- Cylinder
Shape <|-- Pyramid
Shape <|-- CompositeObject
CompositeObject <|-- Chair

DrawingArea "1" o-- "*" Shape : gère >
CompositeObject "1" *-- "*" Entry : contient >
Entry ..> Shape : référence >
@enduml